--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
     "css",
     "javascript"
   ],
-  "author": "Your Name",
+  "author": "Soyeon Kim",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/software-engineer-portfolio.git"
+    "url": "https://github.com/soyeonkm/soyeon-kim-portfolio.git"
   },
   "bugs": {
-    "url": "https://github.com/yourusername/software-engineer-portfolio/issues"
+    "url": "https://github.com/soyeonkm/soyeon-kim-portfolio/issues"
   },
-  "homepage": "https://yourusername.github.io/software-engineer-portfolio",
+  "homepage": "https://soyeonkm.github.io/soyeon-kim-portfolio",
   "devDependencies": {},
   "dependencies": {}
 } 
